chart responsive on mobile - fix

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -276,11 +276,10 @@ body {
 }
 
 .highcharts-container {
-  min-width: 310px;
+  min-width: 280px;
   width: 100%;
   height: 400px;
   margin: 0 auto;
-
 }
 .highcharts-credits {
   display: none;
